wp-content/themes/wilson/style.css
/* ... */
.nav-toggle,
.nav-toggle p,
.nav-toggle .bar,
.tothetop {
	-webkit-transition: all 0.3s ease-in-out;
	 -moz-transition: all 0.3s ease-in-out;
	 -ms-transition: all 0.3s ease-in-out;
	 -o-transition: all 0.3s ease-in-out;
	 transition: all 0.3s ease-in-out;
}


/* Screen Reader Text --------------------------------------- */


.screen-reader-text {
	clip: rect( 1px, 1px, 1px, 1px );
	height: 1px;
    overflow: hidden;
    position: absolute !important;
	width: 1px;
}

.screen-reader-text:focus {
	background-color: #f1f1f1;
	border-radius: 3px;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
	clip: auto !important;
	color: #21759b;
	display: block;
	font-size: 14px;
	font-size: 0.875rem;
	font-weight: bold;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; /* Above WP toolbar. */
}


/* -------------------------------------------------------------------------------- */
/*	2.	Structure
/* -------------------------------------------------------------------------------- */


.wrapper {
	background: url('images/1px-white.png') right repeat-y;
	background-size: 68% auto;
	margin: 0 auto;
	max-width: 86%;
	position: relative;
	width: 1160px;
}

.sidebar {
    float: left;
	margin: 7.5% 0;
    width: 32%;
}

.content {
    background: #FFF;
	float: right;
    position: relative;
    width: 68%;
	z-index: 2;
}
.content .posts{min-height: 1084px;}


/* -------------------------------------------------------------------------------- */
/*	3. Sidebar
/* -------------------------------------------------------------------------------- */


.blog-header,
.blog-menu,
.sidebar .widgets {
	padding-left: 15%;
	padding-right: 15%;
	    margin-top: 14%;
			    margin-bottom: -5%;
}

.blog-header { text-align: center;
    margin-top: -23%;
    margin-bottom: -14%;}


/* Blog logo --------------------------------------- */


.blog-logo { display: inline-block; }

.blog-logo img {
	display: block;
	height: auto;
    max-width: 100%;
	width: auto;
}


/* Blog title --------------------------------------- */


.blog-title a {
    color: #FFF;
	display: block;
    font-family: 'Raleway', sans-serif;
	font-size: 1.75em;
    font-weight: 700;
    letter-spacing: 1px;
	line-height: 120%;
    margin-bottom: 10px;
	text-transform: uppercase;
}

.blog-title a:hover { color: #FF706C; }

.blog-description {
    color: rgba( 255, 255, 255, 0.5 );
	font-family: 'Raleway', sans-serif;
	font-weight: 400;
	line-height: 120%;
}


/* -------------------------------------------------------------------------------- */
/*	4. Navigation
/* -------------------------------------------------------------------------------- */


.nav-toggle,
.mobile-menu {
    display: none;
}

.blog-menu {
	padding-top: 15%;
	padding-bottom: 15%;
	margin-top: 15%;
	margin-bottom: 15%;
	background: #272F38;
	border-radius: 8px 0 0 8px;
}

.blog-menu a {
	position: relative;
	display: block;
	padding: 8px 0;
	color: #FFF;
}

.blog-menu a:hover { padding-left: 10px; color: #FF706C; }

.blog-menu .current-menu-item > a { color: #FF706C; }
.blog-menu .current-menu-item a:hover { padding-left: 0; }

.blog-menu .sub-menu,
.blog-menu .children {
	margin-left: 25px;
}


/* -------------------------------------------------------------------------------- */
/*	5. Widgets
/* -------------------------------------------------------------------------------- */


.widget {
	color: #FFF;
	padding-bottom: 40px;
	border-bottom: 4px solid rgba(255,255,255,0.1);
	margin-bottom: 40px;
	font-size: 0.9em;
}

.widget:last-child {
	padding-bottom: 0;
	border-bottom: none;
	margin-bottom: 0;
}

.widget-title {
	text-transform: uppercase;
	font-weight: 600;
	letter-spacing: 1px;
	margin-bottom: 20px;
	font-size: 13px;
	font-family: 'Raleway', sans-serif;
	color: #FFF;
}

/* widget content */

.widget-content {
	color: rgba(255,255,255,0.7);
	line-height: 150%;
}

.widget-content *:last-child { margin-bottom: 0; }

.widget-content a:hover { text-decoration: underline }

.widget-content .textwidget { line-height: 160%; }

.widget-content p {
	line-height: 160%;
	margin-bottom: 1em;
}

.widget-content li ul { padding-left: 8px; }

.widget-content ul li {
	padding: 10px 0;
	border-top: 1px solid rgba(255,255,255,0.1);
	line-height: 140%;
}

.widget-content ul li:first-child { border-top: 0; }


/* Widget recent entries --------------------------------------- */


.widget_recent_entries li .post-date { margin-left: 5px; color: rgba(255,255,255,0.4); }
.widget_recent_entries li .post-date:before { content: "("; }
.widget_recent_entries li .post-date:after { content: ")"; }


/* Widget search --------------------------------------- */


.widget_search .searchform #s {
	padding: 16px 45px 16px 16px;
	background: #48515C;
	font-family: 'Lato', sans-serif;
	font-size: 1rem;
	border-radius: 6px;
	-webkit-font-smoothing: subpixel-antialiased;
	color: #FFF;
}

.widget_search .searchform #s:focus { color: #FFF; }

.widget_search .searchform .searchsubmit { right: 21px; }

.widget_search .searchform .searchsubmit,
.widget_search .searchform .searchsubmit:before { background: #FFF; }
.widget_search .searchform .searchsubmit:after { background: #48515C; }


/* Widget tag cloud --------------------------------------- */


.widget_tag_cloud .tagcloud a { font-size: 13px !important; }

.tagcloud a {
	display: block;
	float: left;
	padding: 8px 11px;
	line-height: 1;
	margin: 0 5px 5px 0;
	background: rgba(0,0,0,0.2);
	color: rgba(255,255,255,0.5);
	border-radius: 3px;
}

.tagcloud a:hover {
	background: #FF706C;
	text-decoration: none;
	color: #FFF;
}


/* Widget calendar --------------------------------------- */


#wp-calendar {
	width: 100%;
	max-width: 100%;
	text-align: center;
}

#wp-calendar a { color: #FF706C; }

#wp-calendar,
#wp-calendar caption,
#wp-calendar tr,
#wp-calendar td,
#wp-calendar th {
	text-align: center;
}

#wp-calendar caption,
#wp-calendar th,
#wp-calendar td {
	padding: 4% 2%;
}
/* ... */

